# GTestPractice

./: .gitignore  CMakeLists.txt  main.cpp
assert/: Assert.h  CMakeLists.txt  CalculatorTest.h
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  StringProducer.cpp  StringProducer.h
